Upgraded isCompiling and solve functions to use scip directly instead of running it through bash scripts